--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,12 +32,6 @@ jobs:
           - {
               os: "ubuntu-20.04",
               arch: "amd64",
-              target: "manylinux",
-              env: {},
-            }
-          - {
-              os: "ubuntu-20.04",
-              arch: "amd64",
               target: "default",
               env: {},
             }
@@ -83,7 +77,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: manylinux-artifacts
-          path: target/wheels/*manylinux_2_17*.whl
+          path: target/wheels/*manylinux_2_*.whl
         if: ${{ matrix.config.os == 'ubuntu-20.04' }}
       - name: Artifacts
         uses: actions/upload-artifact@v2
