--- a/eng/Dockerfile.examples
+++ b/eng/Dockerfile.examples
@@ -3,19 +3,18 @@
 
 ARG RELEASE=jammy
 
-FROM buildpack-deps:buster-scm AS buster
-
-RUN wget https://packages.microsoft.com/config/debian/10/packages-microsoft-prod.deb \
-    && dpkg -i packages-microsoft-prod.deb \
-    && rm packages-microsoft-prod.deb \
-    && apt-get update \
-    && apt-get install -y --no-install-recommends powershell python3-minimal python3-pip python3-setuptools sudo \
-    && rm -rf /var/lib/apt/lists/*
-
 FROM buildpack-deps:bullseye-scm AS bullseye
 
 RUN curl https://packages.microsoft.com/keys/microsoft.asc | apt-key add - \
     && echo "deb [arch=amd64] https://packages.microsoft.com/repos/microsoft-debian-bullseye-prod bullseye main" > /etc/apt/sources.list.d/microsoft.list \
+    && apt-get update \
+    && apt-get install -y --no-install-recommends powershell python3-minimal python3-pip python3-setuptools sudo \
+    && rm -rf /var/lib/apt/lists/*
+
+FROM buildpack-deps:bookworm-scm AS bookworm
+
+RUN curl https://packages.microsoft.com/keys/microsoft.asc | apt-key add - \
+    && echo "deb [arch=amd64] https://packages.microsoft.com/repos/microsoft-debian-bookworm-prod bookworm main" > /etc/apt/sources.list.d/microsoft.list \
     && apt-get update \
     && apt-get install -y --no-install-recommends powershell python3-minimal python3-pip python3-setuptools sudo \
     && rm -rf /var/lib/apt/lists/*
