--- a/.github/workflows/llvm.yml
+++ b/.github/workflows/llvm.yml
@@ -34,7 +34,7 @@ jobs:
               env: {},
             }
           - {
-              os: "macos-13-xlarge",
+              os: "macos-14",
               arch: "aarch64",
               env: {},
             }
@@ -53,7 +53,7 @@ jobs:
         if: ${{ matrix.config.os == 'macos-11' }}
       - name: MacOS - Install build dependencies, ccache, ninja
         run: brew install ccache ninja
-        if: ${{ matrix.config.os == 'macos-13-xlarge' }}
+        if: ${{ matrix.config.os == 'macos-14' }}
       - name: Windows - Install LLVM 13.0.1
         run: choco install llvm --version=13.0.1 --allow-downgrade
         if: ${{ matrix.config.os == 'windows-2019' }}
