--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,6 +68,12 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: 3.8
+        if: ${{ matrix.config.os != 'macos-14' }}  
+      - name: Set up Python 3.9
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.9
+        if: ${{ matrix.config.os == 'macos-14' }}
       - name: Install LLVM
         uses: ./.github/actions/install-llvm
         with:
