--- a/.github/workflows/llvm.yml
+++ b/.github/workflows/llvm.yml
@@ -33,6 +33,11 @@ jobs:
               arch: "amd64",
               env: {},
             }
+          - {
+              os: "macos-14",
+              arch: "aarch64",
+              env: {},
+            }
     steps:
       - uses: actions/checkout@v3
         with:
@@ -46,6 +51,9 @@ jobs:
       - name: MacOS - Install build dependencies, ccache, ninja
         run: brew install ccache ninja
         if: ${{ matrix.config.os == 'macos-11' }}
+      - name: MacOS - Install build dependencies, ccache, ninja
+        run: brew install ccache ninja
+        if: ${{ matrix.config.os == 'macos-14' }}
       - name: Windows - Install LLVM 13.0.1
         run: choco install llvm --version=13.0.1 --allow-downgrade
         if: ${{ matrix.config.os == 'windows-2019' }}
