--- a/.ado/release.yml
+++ b/.ado/release.yml
@@ -37,7 +37,7 @@ jobs:
       cratesIoFeedOverride: $(cratesIoFeedOverride)
       toolchainFeed: $(toolchainFeed)
     displayName: Install Rust toolchain
-    condition: or(ne(variables['Agent.OS'], 'Darwin'), ne($(arch), 'aarch64'))
+    condition: or(ne(variables['Agent.OS'], 'Darwin'), ne(variables['arch'], 'aarch64'))
 
   - task: RustInstaller@1
     inputs:
@@ -46,7 +46,7 @@ jobs:
       cratesIoFeedOverride: $(cratesIoFeedOverride)
       toolchainFeed: $(toolchainFeed)
     displayName: Install Rust toolchain
-    condition: and(eq(variables['Agent.OS'], 'Darwin'), eq($(arch), 'aarch64'))
+    condition: and(eq(variables['Agent.OS'], 'Darwin'), eq(variables['arch'], 'aarch64'))
 
   - script: |
       rustc --version
