Add ARCHFLAGS var def

--- a/.ado/release.yml
+++ b/.ado/release.yml
@@ -33,6 +33,7 @@ jobs:
     vmImage: $(imageName)
   variables:
     arch: $(arch)
+    ARCHFLAGS: $(ARCHFLAGS)
   timeoutInMinutes: 300
 
   steps:
