--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,23 +75,13 @@ jobs:
         with:
           python-version: 3.8
         if: ${{ matrix.config.os != 'macos-14' }}
-      - name: Linux - Install build dependencies, ccache, ninja
-        run: sudo apt-get install -y ccache ninja-build
-        if: ${{ matrix.config.os == 'ubuntu-20.04' }}
-      - name: Windows - Install build dependencies, sccache, ninja
-        run: choco install --accept-license -y sccache ninja
-        if: ${{ matrix.config.os == 'windows-2019' }}
-      - name: MacOS - Install build dependencies, ccache, ninja
-        run: brew install ccache ninja
-        if: ${{ matrix.config.os == 'macos-11' }}
-      - name: MacOS - Install build dependencies, ccache, ninja
-        run: brew install ccache ninja
-        if: ${{ matrix.config.os == 'macos-14' }}
+
       - name: Install LLVM
         uses: ./.github/actions/install-llvm
         with:
           version: "14"
           os: ${{ matrix.config.os }}
+          arch: ${{ matrix.config.arch }}
           directory: ${{ github.workspace }}/target/llvm
           target: ${{ matrix.config.target }}
       - name: "Build ${{ matrix.config.target }}"
