--- a/.github/actions/install-llvm/action.yml
+++ b/.github/actions/install-llvm/action.yml
@@ -42,7 +42,7 @@ runs:
     - name: MacOS - Install build dependencies, ninja
       run: brew install ninja
       shell: pwsh
-      if: ${{ (inputs.os == 'macos-11') && (steps.cache-llvm.outputs.cache-hit != 'true') }}
+      if: ${{ ((inputs.os == 'macos-11') || (inputs.os == 'macos-14')) && (steps.cache-llvm.outputs.cache-hit != 'true') }}
 
     - name: Configure long paths
       run: git config --global core.longpaths true
