Set up caching for LLVM

--- a/.ado/governance.yml
+++ b/.ado/governance.yml
@@ -17,6 +17,7 @@ schedules:
 variables:
   CARGO_TERM_COLOR: always
   RUST_TOOLCHAIN_VERSION: "1.78"
+  PYTHON_VERSION: "3.11"
 
 jobs:
 - job: "pyqir_governance"
@@ -36,11 +37,14 @@ jobs:
 
   - task: UsePythonVersion@0
     inputs:
-      versionSpec: '3.11'
+      versionSpec: $(PYTHON_VERSION)
 
-  - script: |
-      sudo apt-get install -y ninja-build
-    displayName: Install LLVM build dependencies
+  - template: llvm.yml
+    parameters:
+      version: "14"
+      os: "ubuntu-20.04"
+      arch: "x86_64"
+      directory: $(Build.SourcesDirectory)/target/llvm14-0
 
   - task: CodeQL3000Init@0
     displayName: CodeQL Initialize
