--- a/.ado/llvm.yml
+++ b/.ado/llvm.yml
@@ -14,10 +14,10 @@ steps:
     key: llvm-$(version)-$(os)-$(arch)
     restoreKeys: llvm-$(version)-$(os)-$(arch)
     path: $(directory)
+    cacheHitVar: CACHE_RESTORED
   displayName: Cache LLVM
-  cacheHitVar: CACHE_RESTORED
 
-- scipt: |
+- script: |
     git config --global core.longpaths true
     echo "##vso[task.setvariable variable=QIRLIB_CACHE_DIR;]$(directory)"
     echo "##vso[task.setvariable variable=LLVM_SYS_140_PREFIX;]$(directory)"
