--- a/.ado/llvm.yml
+++ b/.ado/llvm.yml
@@ -9,6 +9,9 @@ parameters:
   type: string
 
 steps:
+- pwsh: New-Item -ItemType Directory -Path ${{ parameters.directory }} -Force
+  displayName: Ensure cache dir exists
+
 - task: Cache@2
   inputs:
     key: llvm-${{ parameters.version }}-${{ parameters.arch }}-${{ parameters.os }}
