--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,36 +54,38 @@ jobs:
               target: "default",
               env: { },
             }
+          - {
+              os: "macos-14",
+              arch: "universal",
+              target: "default",
+              env: {
+                ARCHFLAGS: "-arch arm64 -arch x86_64"
+              },
+            }
     steps:
       - uses: actions/checkout@v4
       - name: Setup rust toolchain
         uses: ./.github/actions/rust-toolchain
         with:
-          toolchain: 1.75.0
+          toolchain: 1.78.0
           components: rustfmt clippy
+      - shell: pwsh
+        run: |
+          rustup target add x86_64-apple-darwin
+        if: ${{ (matrix.config.os == 'macos-14') && (matrix.config.arch == 'universal') }}
       - uses: actions/checkout@v4
       - name: Set up Python 3.8
         uses: actions/setup-python@v5
         with:
           python-version: 3.8
         if: ${{ matrix.config.os != 'macos-14' }}
-      - name: Linux - Install build dependencies, ccache, ninja
-        run: sudo apt-get install -y ccache ninja-build
-        if: ${{ matrix.config.os == 'ubuntu-20.04' }}
-      - name: Windows - Install build dependencies, sccache, ninja
-        run: choco install --accept-license -y sccache ninja
-        if: ${{ matrix.config.os == 'windows-2019' }}
-      - name: MacOS - Install build dependencies, ccache, ninja
-        run: brew install ccache ninja
-        if: ${{ matrix.config.os == 'macos-11' }}
-      - name: MacOS - Install build dependencies, ccache, ninja
-        run: brew install ccache ninja
-        if: ${{ matrix.config.os == 'macos-14' }}
+
       - name: Install LLVM
         uses: ./.github/actions/install-llvm
         with:
           version: "14"
           os: ${{ matrix.config.os }}
+          arch: ${{ matrix.config.arch }}
           directory: ${{ github.workspace }}/target/llvm
           target: ${{ matrix.config.target }}
       - name: "Build ${{ matrix.config.target }}"
@@ -98,7 +100,7 @@ jobs:
       - name: Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ matrix.config.os }}-artifacts
+          name: ${{ matrix.config.os }}-${{ matrix.config.arch }}-artifacts
           path: target/wheels/*
         if: ${{ matrix.config.os != 'ubuntu-20.04' }}
   docs:
