--- a/pyqir/Cargo.toml
+++ b/pyqir/Cargo.toml
@@ -15,6 +15,7 @@ llvm-sys-110 = { package = "llvm-sys", version = "110.0", optional = true }
 llvm-sys-120 = { package = "llvm-sys", version = "120.3", optional = true }
 llvm-sys-130 = { package = "llvm-sys", version = "130.1", optional = true }
 llvm-sys-140 = { package = "llvm-sys", version = "140.1", optional = true }
+llvm-sys-181 = { package = "llvm-sys", version = "181", optional = true }
 pyo3 = { version = "0.19", features = ["abi3-py38", "extension-module"] }
 qirlib = { path = "../qirlib" }
 
@@ -23,6 +24,7 @@ llvm11-0 = ["llvm-sys-110", "qirlib/llvm11-0"]
 llvm12-0 = ["llvm-sys-120", "qirlib/llvm12-0"]
 llvm13-0 = ["llvm-sys-130", "qirlib/llvm13-0"]
 llvm14-0 = ["llvm-sys-140", "qirlib/llvm14-0"]
+llvm18-1 = ["llvm-sys-181", "qirlib/llvm18-1"]
 
 [lib]
 crate-type = ["cdylib"]
